# sd-city-budget

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt
.github/workflows/: refresh.yml
api/: main.py  mcp_server.py  models.py  queries.py
dashboard/: app.py
data/aggregated/: budget_vs_actuals.parquet  cip_by_dept.parquet  council_offices.parquet  dept_budget_trends.parquet  dept_detail.parquet  fund_allocation.parquet  general_fund_summary.parquet  revenue_breakdown.parquet  sankey_expense.parquet  sankey_revenue.parquet
pipeline/: build.py  ingest.py  transform.py  validate.py
