[project]
name = "sd-city-budget"
version = "0.1.0"
description = "San Diego city budget analysis and dashboard"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "streamlit>=1.40",
    "plotly>=5.18",
    "pyarrow>=17.0",
]

[project.scripts]
budget-build = "pipeline.build:main"
